<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".dribbleLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back👋"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login With"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        />
    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="80dp"
        tools:context=".dribbleLogin"
        android:layout_marginTop="30dp">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="🕹️Google"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_rect_bg"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="📚Facebook"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_rect_bg"
            android:textColor="@color/black"
            android:layout_marginEnd="15dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"

        />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_marginLeft="20dp"
        android:background="@drawable/inputfieldborder"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_field"
        android:background="@drawable/inputfieldborder"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password?"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"
        android:textSize="20dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:textSize="16dp"
        android:layout_marginTop="15dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_rect_bg"
        />

</LinearLayout>